[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = "0.7.0"
log = "0.4.33"
nanoid = "0.4"
oauth2 = "5.0.0"
sea-orm = { version = "2.0.0-rc.41", default-features = false, features = [ 
    "entity-registry", "macros", "runtime-tokio-native-tls", "schema-sync", "sqlx-sqlite", "with-json" ]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.7.0", features = ["cors"] }
tower-sessions = "0.15.0"

[build-dependencies]
dotenvy = "0.15.7"
