[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
comms = { path = "../comms" }
futures = "0.3.32"
geojson = "0.24"
gloo-history = "0.3.0"
gloo-net = { version = "0.7.0", features = ["http", "json"] }
gloo-storage = "0.4.0"
http = "1.4.2"
log = "0.4.33"
mapboxgl = { version = "0.7.0" }
polyline = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen-futures = "0.4.76"
wasm-logger = "0.2.0"
web-sys = "0.3.103"
yew = { version = "0.20", features = ["csr"] }

[build-dependencies]
dotenvy = "0.15.7"
